--- a/css.css
+++ b/css.css
@@ -23,8 +23,15 @@
 
 }
 
-.modal {
+.justin {
         margin: auto;
         width: 40%;
         margin-top: 4em;
+}
+
+.moveCenter {
+  padding-top:10%;
+}
+.test {
+  padding-top:20px;
 }
