not as ugly color

--- a/custom.css
+++ b/custom.css
@@ -1,6 +1,6 @@
 body {
         font-family: 'Slabo 27px', serif;
-        background-color: #1F487E;
+        background-color: #D3D3D3;
 
 }
 /*https://www.w3schools.com/css/css_navbar.asp was a guide for nav bar style*/
